[tool.poetry]
name = "repl_python3_Niki-Cathay"
version = "0.1.0"
description = ""
authors = ["hongmingwong <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
Flask-Bootstrap = "^3.3.7"
Flask-WTF = "^1.0.0"
WTForms = "^3.0.0"
WTForms-Components = "^0.10.5"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
